--- a/CPP/Json pretty print.ipynb
+++ b/CPP/Json pretty print.ipynb
@@ -37,22 +37,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_9:30:28: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno viable overloaded '='\u001b[0m\n",
-      "        v_map[0][last_col] = key;\n",
-      "\u001b[0;1;32m        ~~~~~~~~~~~~~~~~~~ ^ ~~~\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/vector:545:13: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'std::__1::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to 'const std::__1::vector<std::__1::basic_string<char>,\n",
-      "      std::__1::allocator<std::__1::basic_string<char> > >' for 1st argument\u001b[0m\n",
-      "    vector& operator=(const vector& __x);\n",
-      "\u001b[0;1;32m            ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/vector:557:13: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'std::__1::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to 'std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char>\n",
-      "      > >' for 1st argument\u001b[0m\n",
-      "    vector& operator=(vector&& __x)\n",
-      "\u001b[0;1;32m            ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/vector:562:13: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'std::__1::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to 'initializer_list<std::__1::vector<std::__1::basic_string<char>,\n",
-      "      std::__1::allocator<std::__1::basic_string<char> > >::value_type>' (aka 'initializer_list<std::__1::basic_string<char> >') for 1st argument\u001b[0m\n",
-      "    vector& operator=(initializer_list<value_type> __il)\n",
-      "\u001b[0;1;32m            ^\n",
-      "\u001b[0m\u001b[1minput_line_9:31:16: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno viable conversion from returned value of type 'algorithm::Meta *' to function return type 'algorithm::Meta'\u001b[0m\n",
+      "\u001b[1minput_line_9:33:18: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno matching member function for call to 'push_back'\u001b[0m\n",
+      "        v_map[0].push_back(key);\n",
+      "\u001b[0;1;32m        ~~~~~~~~~^~~~~~~~~\n",
+      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/vector:676:36: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'std::__1::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to 'const std::__1::__vector_base<std::__1::vector<std::__1::basic_string<char>,\n",
+      "      std::__1::allocator<std::__1::basic_string<char> > >, std::__1::allocator<std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > >::value_type' (aka 'const\n",
+      "      std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >') for 1st argument\u001b[0m\n",
+      "    _LIBCPP_INLINE_VISIBILITY void push_back(const_reference __x);\n",
+      "\u001b[0;1;32m                                   ^\n",
+      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/vector:678:36: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'std::__1::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to 'std::__1::vector<std::__1::vector<std::__1::basic_string<char>,\n",
+      "      std::__1::allocator<std::__1::basic_string<char> > >, std::__1::allocator<std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > >::value_type' (aka\n",
+      "      'std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >') for 1st argument\u001b[0m\n",
+      "    _LIBCPP_INLINE_VISIBILITY void push_back(value_type&& __x);\n",
+      "\u001b[0;1;32m                                   ^\n",
+      "\u001b[0m\u001b[1minput_line_9:34:16: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno viable conversion from returned value of type 'algorithm::Meta *' to function return type 'algorithm::Meta'\u001b[0m\n",
       "        return meta;\n",
       "\u001b[0;1;32m               ^~~~\n",
       "\u001b[0m\u001b[1minput_line_9:5:12: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor (the implicit copy constructor) not viable: no known conversion from 'algorithm::Meta *' to 'const algorithm::Meta &' for 1st argument; dereference the argument with *\u001b[0m\n",
@@ -61,7 +59,7 @@
       "\u001b[0m\u001b[1minput_line_9:5:12: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor (the implicit move constructor) not viable: no known conversion from 'algorithm::Meta *' to 'algorithm::Meta &&' for 1st argument\u001b[0m\n",
       "    struct Meta {\n",
       "\u001b[0;1;32m           ^\n",
-      "\u001b[0m\u001b[1minput_line_9:35:16: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno viable conversion from 'std::__1::__vector_base<std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::allocator<std::__1::vector<std::__1::basic_string<char>,\n",
+      "\u001b[0m\u001b[1minput_line_9:38:16: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno viable conversion from 'std::__1::__vector_base<std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::allocator<std::__1::vector<std::__1::basic_string<char>,\n",
       "      std::__1::allocator<std::__1::basic_string<char> > > > >::value_type' (aka 'std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >') to 'std::__1::string'\n",
       "      (aka 'basic_string<char, char_traits<char>, allocator<char> >')\u001b[0m\n",
       "        string key = v_map[0][col];\n",
@@ -86,10 +84,10 @@
       "      std::__1::allocator<std::__1::basic_string<char> > >') to 'initializer_list<std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >::value_type>' (aka 'initializer_list<char>') for 1st argument\u001b[0m\n",
       "    basic_string(initializer_list<value_type> __il);\n",
       "\u001b[0;1;32m    ^\n",
-      "\u001b[0m\u001b[1minput_line_9:39:52: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1m'auto' not allowed in function prototype\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:42:52: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1m'auto' not allowed in function prototype\u001b[0m\n",
       "    void to_row(MetaMap * m_map, ValueMap * v_map, auto row, int &last_col, int &row_index) {\n",
       "\u001b[0;1;32m                                                   ^~~~\n",
-      "\u001b[0m\u001b[1minput_line_9:42:43: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of overloaded operator '=' is ambiguous (with operand types 'std::__1::__vector_base<std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >,\n",
+      "\u001b[0m\u001b[1minput_line_9:45:43: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of overloaded operator '=' is ambiguous (with operand types 'std::__1::__vector_base<std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >,\n",
       "      std::__1::allocator<std::__1::vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > >::value_type' (aka 'std::__1::vector<std::__1::basic_string<char>,\n",
       "      std::__1::allocator<std::__1::basic_string<char> > >') and 'nlohmann::basic_json<std::map, std::vector, std::__1::basic_string<char>, bool, long long, unsigned long long, double, std::allocator, adl_serializer>')\u001b[0m\n",
       "            v_map[row_index][meta.column] = it.value();\n",
@@ -103,42 +101,42 @@
       "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/vector:562:13: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function\u001b[0m\n",
       "    vector& operator=(initializer_list<value_type> __il)\n",
       "\u001b[0;1;32m            ^\n",
-      "\u001b[0m\u001b[1minput_line_9:48:31: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1minvalid range expression of type 'algorithm::MetaMap *' (aka 'unordered_map<basic_string<char, char_traits<char>, allocator<char> >, algorithm::Meta> *'); did you mean to dereference it with '*'?\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:51:31: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1minvalid range expression of type 'algorithm::MetaMap *' (aka 'unordered_map<basic_string<char, char_traits<char>, allocator<char> >, algorithm::Meta> *'); did you mean to dereference it with '*'?\u001b[0m\n",
       "        for ( const auto &m : map) {\n",
       "\u001b[0;1;32m                              ^\n",
       "\u001b[0m\u001b[0;32m                              *\n",
-      "\u001b[0m\u001b[1minput_line_9:57:48: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected expression\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:60:48: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected expression\u001b[0m\n",
       "            Meta meta = get_column_meta(m_map, )\n",
-      "\u001b[0;1;32m                                               ^\n",
-      "\u001b[0m\u001b[1minput_line_9:59:42: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mreference to non-static member function must be called; did you mean to call it with no arguments?\u001b[0m\n",
-      "            int left_space_width = (meta.width - value_width) / 2 + 2;\n",
-      "\u001b[0;1;32m                                    ~~~~~^~~~~\n"
+      "\u001b[0;1;32m                                               ^\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\u001b[0m\u001b[1minput_line_9:62:42: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mreference to non-static member function must be called; did you mean to call it with no arguments?\u001b[0m\n",
+      "            int left_space_width = (meta.width - value_width) / 2 + 2;\n",
+      "\u001b[0;1;32m                                    ~~~~~^~~~~\n",
       "\u001b[0m\u001b[0;32m                                              ()\n",
-      "\u001b[0m\u001b[1minput_line_9:59:50: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'value_width'\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:62:50: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'value_width'\u001b[0m\n",
       "            int left_space_width = (meta.width - value_width) / 2 + 2;\n",
       "\u001b[0;1;32m                                                 ^\n",
-      "\u001b[0m\u001b[1minput_line_9:60:37: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'width'\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:63:37: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'width'\u001b[0m\n",
       "            int right_space_width = width - value_width - left_space_width + 2;\n",
       "\u001b[0;1;32m                                    ^\n",
-      "\u001b[0m\u001b[1minput_line_9:60:45: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'value_width'\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:63:45: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'value_width'\u001b[0m\n",
       "            int right_space_width = width - value_width - left_space_width + 2;\n",
       "\u001b[0;1;32m                                            ^\n",
-      "\u001b[0m\u001b[1minput_line_9:62:24: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1msubscripted value is not an array, pointer, or vector\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:65:24: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1msubscripted value is not an array, pointer, or vector\u001b[0m\n",
       "            cout << row[i] << string(right_space_width, ' ') << '|';\n",
       "\u001b[0;1;32m                    ~~~^~\n",
-      "\u001b[0m\u001b[1minput_line_9:68:34: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcalled object type 'int' is not a function or function pointer\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:71:34: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcalled object type 'int' is not a function or function pointer\u001b[0m\n",
       "        int row_width = row_width(m_map);\n",
       "\u001b[0;1;32m                        ~~~~~~~~~^\n",
-      "\u001b[0m\u001b[1minput_line_9:84:7: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno matching function for call to 'print_table'\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_9:87:7: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno matching function for call to 'print_table'\u001b[0m\n",
       "      print_table(m_map, v_map, last_col, row_index);\n",
       "\u001b[0;1;32m      ^~~~~~~~~~~\n",
-      "\u001b[0m\u001b[1minput_line_9:67:10: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'algorithm::MetaMap' (aka 'unordered_map<basic_string<char, char_traits<char>, allocator<char> >, algorithm::Meta>') to 'algorithm::MetaMap *' (aka 'unordered_map<basic_string<char,\n",
+      "\u001b[0m\u001b[1minput_line_9:70:10: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'algorithm::MetaMap' (aka 'unordered_map<basic_string<char, char_traits<char>, allocator<char> >, algorithm::Meta>') to 'algorithm::MetaMap *' (aka 'unordered_map<basic_string<char,\n",
       "      char_traits<char>, allocator<char> >, algorithm::Meta> *') for 1st argument; take the address of the argument with &\u001b[0m\n",
       "    void print_table(MetaMap * m_map, ValueMap * v_map, int cols, int rows) {\n",
       "\u001b[0;1;32m         ^\n",
@@ -184,37 +182,7 @@
       "      >::__emplace_unique_key_args<std::__1::basic_string<char>, const std::__1::basic_string<char> &, algorithm::Meta *&>' requested here\u001b[0m\n",
       "        pair<iterator, bool> __res = __table_.__emplace_unique_key_args(__k,\n",
       "\u001b[0;1;32m                                              ^\n",
-      "\u001b[0m\u001b[1minput_line_9:29:16: \u001b[0m\u001b[0;1;30mnote: \u001b[0min instantiation of function template specialization 'std::__1::unordered_map<std::__1::basic_string<char>, algorithm::Meta, std::__1::hash<std::__1::basic_string<char> >, std::__1::equal_to<std::__1::basic_string<char> >,\n",
-      "      std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, algorithm::Meta> > >::insert_or_assign<algorithm::Meta *&>' requested here\u001b[0m\n",
-      "        m_map->insert_or_assign(key, meta);\n",
-      "\u001b[0;1;32m               ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:419:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor not viable: no known conversion from 'algorithm::Meta *' to 'const algorithm::Meta' for 2nd argument; dereference the argument with *\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "    pair(_T1 const& __t1, _T2 const& __t2)\n",
-      "\u001b[0;1;32m    ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:346:41: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate template ignored: disabled by 'enable_if' [with _Dummy = true]\u001b[0m\n",
-      "    using _EnableB = typename enable_if<_Val, bool>::type;\n",
-      "\u001b[0;1;32m                                        ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:346:41: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate template ignored: disabled by 'enable_if' [with _U1 = const std::__1::basic_string<char> &, _U2 = algorithm::Meta *&]\u001b[0m\n",
-      "\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:346:41: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate template ignored: disabled by 'enable_if' [with _U1 = const std::__1::basic_string<char> &, _U2 = algorithm::Meta *&]\u001b[0m\n",
-      "\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:406:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor template not viable: requires 0 arguments, but 2 were provided\u001b[0m\n",
-      "    pair() : first(), second() {}\n",
-      "\u001b[0;1;32m    ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:440:14: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor template not viable: requires single argument '__p', but 2 arguments were provided\u001b[0m\n",
-      "    explicit pair(pair<_U1, _U2> const& __p)\n",
-      "\u001b[0;1;32m             ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:447:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor template not viable: requires single argument '__p', but 2 arguments were provided\u001b[0m\n",
-      "    pair(pair<_U1, _U2> const& __p)\n",
-      "\u001b[0;1;32m    ^\n",
-      "\u001b[0m\u001b[1m/Users/dmitri/miniconda3/include/c++/v1/utility:454:14: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate constructor template not viable: requires single argument '__p', but 2 arguments were provided\u001b[0m\n",
-      "    explicit pair(pair<_U1, _U2>&&__p)\n",
-      "\u001b[0;1;32m             ^\n",
-      "\u001b[0m\u001b[1m"
+      "\u001b[0m\u001b[1minput_line_9:29:16:"
      ]
     }
    ],
@@ -250,7 +218,10 @@
     "        last_col++;\n",
     "        auto meta = new Meta(last_col, key);        \n",
     "        m_map->insert_or_assign(key, meta);\n",
-    "        v_map[0][last_col] = key;\n",
+    "        if (v_map->size() == 0) {\n",
+    "            v_map->push_back(vector<string>());\n",
+    "        }\n",
+    "        v_map[0].push_back(key);\n",
     "        return meta;\n",
     "    }\n",
     "    \n",
